--- a/music/index.html
+++ b/music/index.html
@@ -83,7 +83,7 @@ Music by Nathan Turczan</p>
   
   <article>
     <h1>HMU hbu (2019)</h1>
-    <p>hit me up. how about you?</p>
+    <p>exploring a network of 7-note scales</p>
 
   </article>
 </section>
@@ -98,7 +98,7 @@ Music by Nathan Turczan</p>
   
   <article>
     <h1>HEAVAN (2017)</h1>
-    <p>ascent</p>
+    <p>experiments with microtonality</p>
 
   </article>
 </section>
