--- a/music/index.html
+++ b/music/index.html
@@ -87,7 +87,20 @@ Music by Nathan Turczan</p>
 
   </article>
 </section>
+	
+<section>
+  <nav>
+    <div class="iframe-container">
+	<iframe width="480" height="720" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/535101942&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+</div>
+  </nav>
+  
+  <article>
+    <h1>HMU hbu (2019)</h1>
+    <p>exploring a network of 7-note scales</p>
 
+  </article>
+</section>
 
 <section>
   <nav>
