--- a/music/index.html
+++ b/music/index.html
@@ -96,8 +96,8 @@ Music by Nathan Turczan</p>
   </nav>
   
   <article>
-    <h1>HMU hbu (2019)</h1>
-    <p>exploring a network of 7-note scales</p>
+    <h1>Network Implications (2019)</h1>
+    <p>choral arrangement</p>
 
   </article>
 </section>
