--- a/apps/scale_navigator_HEPTATONIC/index.html
+++ b/apps/scale_navigator_HEPTATONIC/index.html
@@ -240,9 +240,8 @@ div:after {
 
 </style>
   </head>
-  
+    <link rel="icon" href="http://www.nathanturczan.com/apps/hept_scalenav.png">
   <body>
-
     <button id="sound_on_off_button"> <img src="sound_on.png" width="48" height="48"> </button>
 
   	<div id="boo"></div>
