--- a/apps/pressing_scale_navigator/index.html
+++ b/apps/pressing_scale_navigator/index.html
@@ -42,6 +42,17 @@ input[type=checkbox] {
   height: 50px;
 }
 
+#chords1 {
+    position: absolute;
+    bottom: 0;
+}
+
+#chords2 {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+
 }
 </style>
   </head>
@@ -53,5 +64,7 @@ input[type=checkbox] {
     </form>
     <select id='output_port_selector'>
     </select>
+    <p id="chords1">chords to play</p>
+    <p id="chords2">chords to play</p>
   </body>
 </html>
