--- a/apps/scale_navigator_HEPTATONIC/index.html
+++ b/apps/scale_navigator_HEPTATONIC/index.html
@@ -33,7 +33,7 @@
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/13.6.3/Tone.min.js"></script>
     <script language="javascript" type="text/javascript" src="vexflow-debug.js"></script>
-    <script language="javascript" type="text/javascript" src="videoSwitchIndex.js"></script>
+    <!-- <script language="javascript" type="text/javascript" src="videoSwitchIndex.js"></script> -->
     <script language="javascript" type="text/javascript" src="data.js"></script>
     <script language="javascript" type="text/javascript" src="lilypond.js"></script>
     <script language="javascript" type="text/javascript" src="lilypond2.js"></script>
