added portfolio, made changes to sn

--- a/apps/pressing_scale_navigator/index.html
+++ b/apps/pressing_scale_navigator/index.html
@@ -45,6 +45,7 @@ input[type=checkbox] {
 #chords1 {
     position: absolute;
     bottom: 0;
+    text-align:left;
 }
 
 #chords2 {
@@ -65,6 +66,6 @@ input[type=checkbox] {
     <select id='output_port_selector'>
     </select>
     <p id="chords1">chords to play</p>
-    <p id="chords2">chords to play</p>
+    <!-- <p id="chords2">chords to play</p> -->
   </body>
 </html>
