--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <p><a HREF="installation/index">installation</a></p>
       <p><a HREF="video/index">video</a></p>
       <p><a HREF="experiments/index">experiments</a></p>
+      <p><a HREF="portfolio/index">about</a></p>
       <p><a HREF="about/index">about</a></p>
     </nav>
  </div>
