adding portfolio to homepage

--- a/portfolio/INTERSTICES_explanation.html
+++ b/portfolio/INTERSTICES_explanation.html
@@ -24,6 +24,24 @@
 
 <h1>INTERSTICES // Heptagrams</h1>
 
+<p>INTERSTICES is an improvisational piece of networked music composed for the CalArts
+Machine Orchestra that premiered December 6th, 2018. Inspired by Terry Reilly’s In
+C, the piece is based around the idea of synchronizing a large ensemble of improvisers
+over changing scales as controlled by a conductor.</p>
+
+<img src="https://lh3.googleusercontent.com/NWfbsppj..." />
+
+<p>INTERSTICES makes use of the SNLPN to stay in harmonic sync, with a player directing modulation on a global scale using the Scale Navigator in its Conductor capacity.
+Other members of the ensemble—playing acoustic instruments or performing with Ableton Live—are updated of scale changes via the Client component, whose screen
+score transforms to describe the current selected scale for the acoustic players to sight
+read and interpret.1
+If the player is performing with an Ableton session, the Client
+also sends an index number identifying the current scale to a “Scale Rack” object, controlling every MIDI track within the session and filtering out notes that are foreign to
+the current scale. The form of the piece is determined by an animated scrolling score
+that plays on a projector screen (Figure 5.2). This score also contained indications for
+rehearsal number, tempo, dynamics, density, color, and other miscellaneous expressive
+instructions.</p>
+
 <p>INTERSTICES is an improvisational piece of networked
 music composed for the CalArts Machine Orchestra that
 premiered December 6th, 2018. Inspired by Terry Reilly’s
@@ -41,6 +59,18 @@ an index number identifying the current scale to a “Scale
 Rack” object, controlling every MIDI track within the session and filtering out notes that are foreign to the current
 scale. The form of the piece is determined by an animated
 scrolling score that plays on a projector screen.</p>
+
+<p>The piece is an electro-acoustic improvisational chorale for the Chordas vocal ensemble
+(SATB), live electronics, and interactive score that premiered December 1st 2018 at
+CalArts. It begins in C Diatonic, with each of the four singers responsible for improvising
+melody using only two notes of the scale. The author used the Scale Navigator to
+determine the next fifteen measures that comprise the form of the piece.</p>
+
+<p>The author created a transformative screen score to cue singers and assist them with each
+modulation.1 This screen score is controlled by a conductor, who presses a “Next Measure” button that highlights the current measure and triggers electronic and recorded
+sounds in a concurrently running Ableton session.
+The author re-titled the piece Heptagrams after changing the harmonic structure of the
+piece.</p>
 
 </div>
 
