--- a/portfolio/just_man_explanation.html
+++ b/portfolio/just_man_explanation.html
@@ -24,6 +24,20 @@
 
 <h1>The Just Man</h1>
 
+<p>The Scale Navigator has been proven to aid composers during the pre-compositional phase of writing music. Turczan’s
+process for writing Network Impressions relied on the Scale
+Navigator to help pre-determine the piece’s blueprint for
+modulation. The piece is an electro-acoustic improvisational chorale for the Chordas vocal ensemble (SATB), live
+electronics, and interactive score that premiered December
+1st, 2018 at CalArts. Begining in C Diatonic, each of the
+four singers is responsible for improvising melody using only
+two notes of the scale. Turczan used the Scale Navigator to
+determine the next fifteen measures of the piece.
+Turczan created a transformative screen score (Figure 5)
+to cue singers and assist them with each modulation.5 This
+screen score is controlled by a conductor, who presses a
+“Next Measure” button that highlights the current measure
+and triggers electronic and recorded sounds in a concurrently running Ableton session.</p>
 
 <p>INTERSTICES is an improvisational piece of networked
 music composed for the CalArts Machine Orchestra that
@@ -41,7 +55,7 @@ is performing with an Ableton session, the Client also sends
 an index number identifying the current scale to a “Scale
 Rack” object, controlling every MIDI track within the session and filtering out notes that are foreign to the current
 scale. The form of the piece is determined by an animated
-scrolling score that plays on a projector screen<p>
+scrolling score that plays on a projector screen</p>
 </div>
 
 </body>
