--- a/portfolio/scale_nav_explanation.html
+++ b/portfolio/scale_nav_explanation.html
@@ -22,6 +22,7 @@
 
     <div class="main">
         <h1>The Scale Navigator</h1>
+        <h4>Chrome only! for now</h4>
 
         <div class="imageRight">
             <div class="imageInner">
