--- a/index.html
+++ b/index.html
@@ -13,16 +13,19 @@
   
   <header class="container">
   <div class="row">
-    <h1 class="col-sm-8"><b>NATHAN TURCZAN</b></h1>
+    <h1><b>NATHAN TURCZAN</b></h1>
     <nav class="nav">
-      <p><a HREF="sound_design/index">sound design</a></p>
-      <p><a HREF="music/index">music</a></p>
-      <p><a HREF="apps/index">UI design</a></p>
-      <p><a HREF="installation/index">installation</a></p>
-      <p><a HREF="video/index">video</a></p>
-      <p><a HREF="experiments/index">experiments</a></p>
-      <p><a HREF="portfolio/index">about</a></p>
-      <p><a HREF="about/index">about</a></p>
+      <p>
+        <a HREF="sound_design/index">sound design</a> | 
+        <a HREF="music/index">music</a> | 
+        <a HREF="apps/index">UI design</a> | 
+        <a HREF="installation/index">installation</a> | 
+        <a HREF="video/index">video</a> | 
+        <a HREF="experiments/index">experiments</a> | 
+        <a HREF="portfolio/index">portfolio</a> | 
+        <a HREF="about/index">about</a> 
+        
+        </p>
     </nav>
  </div>
 </header>
