finishing interstices and updating portfolio

--- a/portfolio/scale_nav_explanation/index.html
+++ b/portfolio/scale_nav_explanation/index.html
@@ -15,7 +15,7 @@
         <div>
             <h1><b>NATHAN TURCZAN</b></h1>
             <nav class="nav">
-                <p>explanation</p>
+                <p>back to <a HREF="../index">portfolio</a></p>
             </nav>
         </div>
     </header>
