--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -37,7 +37,7 @@ td.desc
     padding-bottom: 0.75em;
     vertical-align: top;
     width: 25em;
-    
+
 }
 
 td.odd, td.odd p, td.odd h3
@@ -138,12 +138,12 @@ function portfolio_html()
     <h1><b>NATHAN TURCZAN</b></h1>
     <nav class="nav">
       <p>
-        <a HREF="sound_design/index">sound design</a> | 
-        <a HREF="music/index">music</a> | 
-        <a HREF="apps/index">UI design</a> | 
-        <a HREF="installation/index">installation</a> | 
-        <a HREF="video/index">video</a> | 
-        <a HREF="experiments/index">experiments</a> | 
+        <a HREF="../sound_design/index">sound design</a> | 
+        <a HREF="../music/index">music</a> | 
+        <a HREF="../apps/index">UI design</a> | 
+        <a HREF="../installation/index">installation</a> | 
+        <a HREF="../video/index">video</a> | 
+        <a HREF="../experiments/index">experiments</a> | 
         <strong>portfolio</strong> |
         <a HREF="about/index">about</a> 
         
