--- a/sound_design/index.html
+++ b/sound_design/index.html
@@ -15,13 +15,14 @@
   <div class="row">
     <h1 class="col-sm-8"><b>NATHAN TURCZAN</b></h1>
     <nav class="nav">
-      <p>sound design</p>
-      <p>music</p>
-      <p>UI design</p>
-      <p>installation</p>
-      <p>video</p>
-      <p>experiments</p>
-      <p>about</p>
+      <strong>sound design</strong> | 
+      <a HREF="../music/index">music</a> | 
+      <a HREF="../apps/index">UI design</a> | 
+      <a HREF="../installation/index">installation</a> | 
+      <a HREF="../video/index">video</a> | 
+      <a HREF="../experiments/index">experiments</a> | 
+      <a HREF="../portfolio/index">portfolio</a> | 
+      <a HREF="about/index">about</a> 
     </nav>
  </div>
 </header>
