--- a/video/index.html
+++ b/video/index.html
@@ -15,7 +15,14 @@
   <div class="row">
     <h1 class="col-sm-8"><b>NATHAN TURCZAN</b></h1>
     <nav class="nav">
-      <p>found footage video collage</p>
+      <a HREF="../sound_design/index">sound design</a> | 
+      <a HREF="../music/index">music</a> | 
+      <a HREF="../apps/index">UI design</a> | 
+      <a HREF="../installation/index">installation</a> | 
+      <strong>video</strong> | 
+      <a HREF="../experiments/index">experiments</a> | 
+      <a HREF="../portfolio/index">portfolio</a> | 
+      <a HREF="about/index">about</a> 
     </nav>
  </div>
 </header>
