fix broken image in INTERTICES

--- a/portfolio/INTERSTICES_explanation/index.html
+++ b/portfolio/INTERSTICES_explanation/index.html
@@ -43,7 +43,7 @@
 
         <div class="imageLeft">
             <div class="imageInner">
-                <img src="client.png" alt="network diagram" style="width:300px;height:auto;" />
+                <img src="client.jpg" alt="network diagram" style="width:300px;height:auto;" />
             </div>
             Figure 2: Client component
         </div>
