--- a/portfolio/scale_nav_explanation/index.html
+++ b/portfolio/scale_nav_explanation/index.html
@@ -233,7 +233,20 @@
 
         <h4>add pressing scale navigator, fork from Heptatonic scale navigator</h4>
 
+        <div class="imageCenter">
+            <div class="imageInner">
+                <img src="process/pressing.png" alt="network diagram" style="width:100%;height:auto;" />
+            </div>
+            Figure : pressing scale navigator
+        </div>
+        <h4>add pressing basic chord symbols to interface</h4>
 
+        <div class="imageCenter">
+            <div class="imageInner">
+                <img src="process/added_basic_triads.png" alt="network diagram" style="width:100%;height:auto;" />
+            </div>
+            Figure added chord symbols of basic triads
+        </div>
         
 
 
