--- a/apps/fret/index.html
+++ b/apps/fret/index.html
@@ -1,74 +1,101 @@
 <!DOCTYPE html>
 <html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="./style.css">
-  <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
-  <script language="javascript" src="libraries/p5.dom.js"></script>
-  <script language="javascript" type="text/javascript" src="data.js"></script>
-  <script language="javascript" type="text/javascript" src="sketch.js"></script>
+   <head>
+      <meta charset="UTF-8">
+      <link rel="stylesheet" href="./style.css">
+      <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
+      <script language="javascript" src="libraries/p5.dom.js"></script>
+      <script language="javascript" type="text/javascript" src="data.js"></script>
+      <script language="javascript" type="text/javascript" src="sketch.js"></script>
+   </head>
+   <body>
+      <table>
+         <tbody>
+            <tr>
+               <td><img src="trills/4-6.svg" alt="e-fs"></td>
+               <td><img src="trills/5-6.svg" alt="f-gf"></td>
+               <td><img src="trills/6-8.svg" alt="fs-gs"></td>
+               <td><img src="trills/9-10.svg" alt="a-bf"></td>
+            </tr>
+            <tr>
+               <td><img src="trills/8-10.svg" alt="af-bf"></td>
+               <td><img src="trills/10-11.svg" alt="as-b"></td>
+               <td><img src="trills/10-0.svg" alt="bf-c"></td>
+               <td><img src="trills/11-1.svg" alt="b-cs"></td>
+            </tr>
+            <tr>
+               <td><img src="trills/0-1.svg" alt="c-df"></td>
+               <td><img src="trills/0-2.svg" alt="c-d"></td>
+               <td><img src="trills/1-2.svg" alt="cs-d"></td>
+               <td><img src="trills/1-3.svg" alt="df-ef"></td>
+            </tr>
+         </tbody>
+      </table>
 
-</head>
-<body>
+      <form>
+         <input type="checkbox" id="autopilot_checkbox" >autopilot</input>
+      </form>
 
-	<form align="right" >
-      <input type="checkbox" id="autopilot_checkbox" >autopilot</input>
-    </form>
+      <p id="chords1">chords to play</p>
 
-    <p id="chords1">chords to play</p>
+      <div class="guitar-neck">
+         <div class="fret first"></div>
+         <div class="fret"></div>
+         <div class="fret"></div>
+         <div class="fret"></div>
+         <div class="fret"></div>
+         <div class="fret"></div>
+         <div class="fret"></div>
+         <div class="fret"></div>
+         <div class="fret"></div>
+         <div class="fret"></div>
+         <div class="fret"></div>
+         <div class="fret"></div>
+         <ul class="dots">
+            <li>3</li>
+            <li>5</li>
+            <li>7</li>
+            <li>9</li>
+         </ul>
+         <ul class="strings">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+         </ul>
+         <ul class="open-notes">
+            <li class="low-e">E</li>
+            <li class="b">B</li>
+            <li class="g">G</li>
+            <li class="d">D</li>
+            <li class="a">A</li>
+            <li class="high-e">E</li>
+         </ul>
+         <div class="notes">
+            <div class="mask low-e">
+               <ul></ul>
+            </div>
+            <div class="mask a">
+               <ul></ul>
+            </div>
+            <div class="mask d">
+               <ul></ul>
+            </div>
+            <div class="mask g">
+               <ul></ul>
+            </div>
+            <div class="mask b">
+               <ul></ul>
+            </div>
+            <div class="mask high-e">
+               <ul></ul>
+            </div>
+         </div>
+      </div>
 
-	<div class="guitar-neck">
-		
-
-		<div class="fret first"></div>
-		<div class="fret"></div>
-		<div class="fret"></div>
-		<div class="fret"></div>
-		<div class="fret"></div>
-		<div class="fret"></div>
-		<div class="fret"></div>
-		<div class="fret"></div>
-		<div class="fret"></div>
-		<div class="fret"></div>
-		<div class="fret"></div>
-		<div class="fret"></div>
-
-		
-		<ul class="dots">
-			<li>3</li>
-			<li>5</li>
-			<li>7</li>
-			<li>9</li>
-		</ul>
-		<ul class="strings">
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-		</ul>
-		
-		<ul class="open-notes">
-			<li class="low-e">E</li>
-			<li class="b">B</li>
-			<li class="g">G</li>
-			<li class="d">D</li>
-			<li class="a">A</li>
-			<li class="high-e">E</li>
-		</ul>
-		<div class="notes">
-			<div class="mask low-e"><ul></ul></div>
-			<div class="mask a"><ul></ul></div>
-			<div class="mask d"><ul></ul></div>
-			<div class="mask g"><ul></ul></div>
-			<div class="mask b"><ul></ul></div>
-			<div class="mask high-e"><ul></ul></div>
-		</div>
-	</div>
-	
-<!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="./script.js"></script>
-
-</body>
+      <!-- partial -->
+      <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="./script.js"></script>
+   </body>
 </html>
