added flute notes

--- a/apps/fret/index.html
+++ b/apps/fret/index.html
@@ -12,16 +12,23 @@
       <table>
          <tbody>
             <tr>
+               <td><img src="trills/2-4.svg" alt="d-e"></td>
+               <td><img src="trills/3-5.svg" alt="ef-f"></td>
                <td><img src="trills/4-6.svg" alt="e-fs"></td>
-               <td><img src="trills/5-6.svg" alt="f-gf"></td>
-               <td><img src="trills/6-8.svg" alt="fs-gs"></td>
-               <td><img src="trills/9-10.svg" alt="a-bf"></td>
+               
             </tr>
             <tr>
+               
+               <td><img src="trills/5-6.svg" alt="f-gf"></td>
+               <td><img src="trills/6-8.svg" alt="fs-gs"></td>
+               <td><img src="trills/8-9.svg" alt="gs-a"></td>
                <td><img src="trills/8-10.svg" alt="af-bf"></td>
+            </tr>
+            <tr>
+               <td><img src="trills/9-10.svg" alt="a-bf"></td>
                <td><img src="trills/10-11.svg" alt="as-b"></td>
                <td><img src="trills/10-0.svg" alt="bf-c"></td>
-               <td><img src="trills/11-1.svg" alt="b-cs"></td>
+               <!-- <td><img src="trills/11-1.svg" alt="b-cs"></td> -->
             </tr>
             <tr>
                <td><img src="trills/0-1.svg" alt="c-df"></td>
