--- a/apps/fret/index.html
+++ b/apps/fret/index.html
@@ -155,7 +155,34 @@
          </div>
       </div>
 
-      <!-- partial -->
-      <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="./script.js"></script>
+      <!-- Piano keys -->
+    
+      <link rel="stylesheet" href="./pianostyle.css">
+
+<!-- Piano keys -->
+<div class="pianowrapper">
+    <div class="piano">
+      <div data-note="C" class="key white">
+        <span class="key-value"></span>
+      </div>
+      <div data-note="Db" class="key black"></div>
+      <div data-note="D" class="key white"></div>
+      <div data-note="Eb" class="key black"></div>
+      <div data-note="E" class="key white"></div>
+      <div data-note="F" class="key white"></div>
+      <div data-note="Gb" class="key black"></div>
+      <div data-note="G" class="key white"></div>
+      <div data-note="Ab" class="key black"></div>
+      <div data-note="A" class="key white"></div>
+      <div data-note="Bb" class="key black"></div>
+      <div data-note="B" class="key white"></div>
+    </div>
+</div>
+
+<!-- scritps -->
+      <script  src="./pianoscript.js"></script>
+      <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+      <script  src="./script.js"></script>
+
    </body>
 </html>
