--- a/apps/ensemble/index.html
+++ b/apps/ensemble/index.html
@@ -38,7 +38,7 @@
       </div>  
       <div id="autopilot_container">
          <form>
-            <input type="checkbox" id="autopilot_checkbox" >autopilot</input>
+            <input type="checkbox" id="autopilot_checkbox" style="transform: scale(2);">       autopilot</input>
          </form>
       </div>  
     </div>
@@ -46,7 +46,7 @@
 
       <div id="selectbox_container">
          <form action="" method="post">
-            <select id='purpose'>
+            <select id='purpose' style="transform: scale(2);">
                <option value="" disabled selected>select interface</option>
                <optgroup label="fretted intstrument tablature">
                   <option value="0">mandolin</option>
@@ -71,7 +71,7 @@
 
       <div style='display:none;' id="guitar_container" width=100%>
 
-         <svg xmlns="http://www.w3.org/2000/svg" version="1.1" baseProfile="full" width="980" height="400">
+         <svg xmlns="http://www.w3.org/2000/svg" version="1.1" baseProfile="full" width="100%"  viewBox="0 0 980 400">
             <line stroke="rgb(0,0,0)" stroke-width="7" x1="80" x2="80" y1="59.25" y2="311.5" />
             <circle cx="255.0" cy="185.0" fill="rgb(200,200,200)" r="20"  />
             <text dy="0.3em" fill="rgb(0,0,0)" font-size="20" font-weight="bold" style="text-anchor:middle" x="255.0" y="185.0">3</text>
@@ -340,7 +340,7 @@
 
       <div style='display:none;' id="mandolin_container">
 
-         <svg xmlns="http://www.w3.org/2000/svg" version="1.1" baseProfile="full" width="980" height="300">
+         <svg xmlns="http://www.w3.org/2000/svg" version="1.1" baseProfile="full" width="100%" viewBox="0 0 980 300">
             <line stroke="rgb(0,0,0)" stroke-width="7" x1="80" x2="80" y1="59.0" y2="211.5" />
             <circle cx="255.0" cy="135.0" fill="rgb(200,200,200)" r="20" />
             <text dy="0.3em" fill="rgb(0,0,0)" font-size="20" font-weight="bold" style="text-anchor:middle" x="255.0" y="135">3</text>
