fixing widths again

--- a/apps/ensemble/index.html
+++ b/apps/ensemble/index.html
@@ -38,7 +38,7 @@
       </div>  
       <div id="autopilot_container">
          <form>
-            <input type="checkbox" id="autopilot_checkbox" style="transform: scale(2);">       autopilot</input>
+            <input type="checkbox" id="autopilot_checkbox" style="transform: scale(2);">_autopilot</input>
          </form>
       </div>  
     </div>
