integrating Dexter Shepherds backend firebase JS script

--- a/apps/ensemble/index.html
+++ b/apps/ensemble/index.html
@@ -10,7 +10,7 @@
       <link rel="stylesheet" href="./pianostyle.css">
       <link rel="stylesheet" href="./flutestyle.css">
 
-      
+
 
       <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
       <script language="javascript" src="libraries/p5.dom.js"></script>
@@ -625,7 +625,7 @@
 
 <!-- scritps -->
       <script src="https://www.gstatic.com/firebasejs/7.8.1/firebase-app.js"></script>
-      <script src="backend.js"></script>
+      <script src="backend.js" type="module" ></script>
       
    </body>
 </html>
