--- a/apps/scale_navigator_HEPTATONIC/index.html
+++ b/apps/scale_navigator_HEPTATONIC/index.html
@@ -41,6 +41,7 @@
     <script language="javascript" type="text/javascript" src="voicings.js"></script>
     <script language="javascript" type="text/javascript" src="notation.js"></script>
     <script language="javascript" type="text/javascript" src="sketch.js"></script>
+    
 
 
 
@@ -225,8 +226,8 @@ div:after {
 
 
 </style>
+<link rel="icon" href="icon_scalenav.gif" type="image/gif" >
   </head>
-    <link rel="icon" href="http://www.nathanturczan.com/apps/hept_scalenav.png">
   <body>
     <button id="sound_on_off_button"> <img src="sound_on.png" width="48" height="48"> </button>
 
