remove sound on / off image

--- a/apps/scale_navigator_HEPTATONIC/index.html
+++ b/apps/scale_navigator_HEPTATONIC/index.html
@@ -229,7 +229,7 @@ div:after {
 <link rel="icon" href="icon_scalenav.gif" type="image/gif" >
   </head>
   <body>
-    <button id="sound_on_off_button"> </button>
+    <button id="sound_on_off_button"> UNMUTE sound</button>
 
   	<div id="boo"></div>
     <div class="menu">
