--- a/apps/scale_navigator_HEPTATONIC/index.html
+++ b/apps/scale_navigator_HEPTATONIC/index.html
@@ -227,6 +227,8 @@ div:after {
 
 </style>
 <link rel="icon" href="icon_scalenav.gif" type="image/gif" >
+<meta prefix="og: http://ogp.me/ns#" property="og:title" content="Scale Navigator" />
+<meta prefix="og: http://ogp.me/ns#" property="og:image" content="icon_scalenav.gif" />
   </head>
   <body>
     <button id="sound_on_off_button"> UNMUTE sound</button>
