add social media images

--- a/apps/scale_navigator_HEPTATONIC/index.html
+++ b/apps/scale_navigator_HEPTATONIC/index.html
@@ -229,6 +229,9 @@ div:after {
 <link rel="icon" href="icon_scalenav.gif" type="image/gif" >
 <meta prefix="og: http://ogp.me/ns#" property="og:title" content="Scale Navigator" />
 <meta prefix="og: http://ogp.me/ns#" property="og:image" content="hept_sn.png" />
+<meta prefix="og: http://ogp.me/ns#" property="og:description" content="Scale Navigator is a web app for exploring harmony" />
+<meta prefix="og: http://ogp.me/ns#" property="og:url" content="https://www.nathanturczan.com/apps/scale_navigator_HEPTATONIC/" />
+
   </head>
   <body>
     <button id="sound_on_off_button"> UNMUTE sound</button>
