adding donate button

--- a/apps/scale_navigator_HEPTATONIC/index.html
+++ b/apps/scale_navigator_HEPTATONIC/index.html
@@ -16,7 +16,7 @@
     <!-- End Google Analytics -->
     
     <script>
-      window.userID = Math.floor(Math.random()*100000)
+      window.userID = Math.floor(Math.random()*100000);
       </script>
     
     <meta charset="UTF-8">
