--- a/about/index.html
+++ b/about/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - nano_portfolio_home</title>
+  <title>About Nathan Turczan</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link rel="stylesheet" media="screen and (orientation : landscape)" href="widescreen.css">
 <link rel="stylesheet" media="screen and (orientation : portrait)" href="smallscreen.css">
