--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.5.44/Tone.js"></script>
 <script src="https://assets.codepen.io/2173169/jquery.knob.min.js"></script>
 
-<button>🎵</button>
+<button>🔊</button>
 
 
 
@@ -30,14 +30,15 @@
 </div>
 
 <footer>
-  <div class="footer_option">sound<br>design</div>
+  <!-- <div class="footer_option">sound<br>design</div>
   <div class="footer_option">music</div>
   <div class="footer_option">apps</div>
   <div class="footer_option">installation</div>
   <div class="footer_option">video</div>
   <div class="footer_option">experiments</div>
   <div class="footer_option">portfolio</div>
-  <div class="footer_option">about</div>
+  <div class="footer_option">about</div> -->
+  designs interactive non-linear audio experiences
 </footer>
 
 <canvas id="three_canvas"></canvas>
