--- a/about/index.html
+++ b/about/index.html
@@ -3,9 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>About</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+    <title>About Nathan</title>
     <link rel="stylesheet" href="../global_css.css">
     <link rel="stylesheet" href="style.css">
 </head>
