--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>portfolio site 2022</title>
+    <title>Nathan Turczan: Portfolio '22</title>
     <link rel="stylesheet" href="global_css.css">
     <link rel="stylesheet" href="style.css">
 </head>
