--- a/music/index.html
+++ b/music/index.html
@@ -1,218 +1,75 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    <title>Music</title>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Music - Nathan Turczan</title>
     <link rel="stylesheet" href="../global_css.css">
-    <link rel="stylesheet" type="text/css" href="main.css">
-    <script src="scores_data.js"></script>
-    <script src="performances_data.js"></script>
-    <script src="tracks_data.js"></script>
 </head>
-
 <body>
-    <!--   <header class="container">
-  <div class="row">
-    <h1 class="col-sm-8"><b>NATHAN TURCZAN</b></h1>
-    <nav class="nav">
-      <p><a href="#scores">scores</a></p>
-      <p><a href="#performance">performances</a></p>
-      <p><a href="#tracks">selected tracks</a></p>
-      
-    </nav>
- </div>
-</header> -->
-    <div id="navigation">
-        <ul>
-            <li class="nav_option"><a href="../index.html" class="nav_link">Home</a></li>
-            <li class="nav_option"><a href="../about/index.html" class="nav_link">About</a></li>
-            <li class="nav_option"><a href="index.html" class="nav_link" class="nav_link" id="selected">Music</a></li>
-            <li class="nav_option"><a href="../sound_design/index.html" class="nav_link">Sound Design</a></li>
-            <li class="nav_option"><a href="../product_design/index.html" class="nav_link">Product Design</a></li>
-            <li class="nav_option"><a href="../installation/index.html" class="nav_link">Installation</a></li>
-            <li class="nav_option"><a href="https://calartswebclass.vercel.app/" class="nav_link">Teaching</a></li>
-            <li class="nav_option"><a href="../experiments/index.html" class="nav_link">Experiments</a></li>
-        </ul>
+    <header>
+        <h1><a href="../index.html">Nathan Turczan</a></h1>
+        <nav>
+            <a href="../about/index.html">About</a>
+            <a href="mailto:nathanturczan@gmail.com">Contact</a>
+        </nav>
+    </header>
+
+    <div class="page-container">
+        <div class="page-header">
+            <h2>Music</h2>
+            <p>Albums, commissions, film scores, and performances</p>
+        </div>
+
+        <div class="project-grid">
+            <div class="project">
+                <div class="project-image" style="background-image: url('airboat.jpg');"></div>
+                <h3>Airboat</h3>
+                <p class="date">2020</p>
+                <p class="format">Spectral Orchestration</p>
+                <p class="desc">
+                    Spectral orchestration of a droning airboat motor traversing Florida swamps.
+                    <a href="https://youtu.be/..." target="_blank">Watch</a>
+                </p>
+            </div>
+
+            <div class="project">
+                <div class="project-image" style="background-image: url('wild_rose.jpg');"></div>
+                <h3>To A Wild Rose Growing Throughout the Multiverse</h3>
+                <p class="date">2020</p>
+                <p class="format">Album</p>
+                <p class="desc">
+                    Procedurally generated algorithmic variations of Edward MacDowell's "To A Wild Rose."
+                    <a href="https://..." target="_blank">Listen</a>
+                </p>
+            </div>
+
+            <div class="project">
+                <div class="project-image" style="background-image: url('adoration.png');"></div>
+                <h3>Adoration of the Flowers</h3>
+                <p class="date">2021</p>
+                <p class="format">Nature Documentary Score</p>
+                <p class="desc">
+                    Original score for nature documentary.
+                    <a href="https://youtu.be/..." target="_blank">Watch</a>
+                </p>
+            </div>
+        </div>
+
+        <footer>
+            <a href="https://twitter.com/nathanturczan" target="_blank">
+                <img src="../about/tw.png" class="social" alt="Twitter">
+            </a>
+            <a href="https://www.facebook.com/turczan" target="_blank">
+                <img src="../about/fb.png" class="social" alt="Facebook">
+            </a>
+            <a href="https://www.instagram.com/nathan_turczan/" target="_blank">
+                <img src="../about/insta.png" class="social" alt="Instagram">
+            </a>
+            <a href="https://www.youtube.com/channel/UC6YNcS-QABdIFU0BUlnFwbg" target="_blank">
+                <img src="../about/yt.png" class="social" alt="YouTube">
+            </a>
+        </footer>
     </div>
-
-
-
-    <div id="project_wrapper">
-        <div class="sub-heading"><a href="#scores" style="text-decoration:none;">scores</a> </div>
-        <table class="portfolio">
-            <script type="text/javascript">
-            document.write(scores_html());
-            </script>
-        </table>
-        <div class="sub-heading"><a id="performance" href="#performances" style="text-decoration:none;">performances</a> </div>
-        <table class="portfolio">
-            <script type="text/javascript">
-            document.write(performances_html());
-            </script>
-        </table>
-        
-    </div>
-    <!-- <section>
-  <nav>
-    <div class="iframe-container">
-      <iframe src="https://player.vimeo.com/video/200293623" width="480" height="270" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-<p><a href="https://vimeo.com/200293623">Walking Backwards</a> from <a href="https://vimeo.com/turczan">Lachlan Turczan</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
-    </div>
-  </nav>
-  
-  <article>
-    <h1>Walking Backwards (2017)</h1>
-    <p>A man walks backwards into a deeper state of consciousness. <br>Music by Nathan Turczan.<br>Filmed August 2016 in Macau</p>
-
-  </article>
-</section>
-  
-<section>
-  <nav>
-    <div class="iframe-container">
-      <iframe src="https://player.vimeo.com/video/245069362" width="480" height="720" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-<p><a href="https://vimeo.com/245069362">a perfect mess</a> from <a href="https://vimeo.com/turczan">Lachlan Turczan</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
-    </div>
-  </nav>
-  
-  <article>
-    <h1>A Perfect Mess (2018)</h1>
-    <p>an experimental animation that presents chaotic patterns that resolve into predetermined design. created with custom software developed by WET in 1998 to choreograph the Bellagio fountains.<br>film by lachlan turczan<br>music by nathan turczan</p>
-
-  </article>
-</section>
-  
-<section>
-  <nav>
-    <div class="iframe-container">
-      <iframe src="https://player.vimeo.com/video/68821283" width="480" height="720" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-<p><a href="https://vimeo.com/68821283">Fluorescent Sunset</a> from <a href="https://vimeo.com/turczan">Lachlan Turczan</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
-    </div>
-  </nav>
-  
-  <article>
-    <h1>Fluorescent Sunset (2013)</h1>
-    <p>A collaborative light painting created with the help of Anthony Dahut.<br>
-Inspired by the light works of James Turrell.<br> 
-Music by Nathan Turczan</p>
-  </article>
-</section>
-
-
-<section>
-  <nav>
-    <div class="iframe-container">
-      <iframe width="480" height="270" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/612527694&color=%23497bf7&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-    </div>
-  </nav>
-  
-  <article>
-    <h1>HMU hbu (2019)</h1>
-    <p>exploring a network of 7-note scales</p>
-
-  </article>
-</section>
-  
-<section>
-  <nav>
-    <div class="iframe-container">
-  <iframe width="480" height="720" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/535101942&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-</div>
-  </nav>
-  
-  <article>
-    <h1>Network Implications (2019)</h1>
-    <p>choral arrangement</p>
-
-  </article>
-</section>
-
-<section>
-  <nav>
-    <div class="iframe-container">
-      <iframe width="480" height="270" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/306000790&color=%23497bf7&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-    </div>
-  </nav>
-  
-  <article>
-    <h1>HEAVAN (2017)</h1>
-    <p>experiments with microtonality</p>
-
-  </article>
-</section>
-  
-<section>
-  <nav>
-    <div class="iframe-container">
-      <iframe width="480" height="720" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/289467692&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-    </div>
-  </nav>
-  
-  <article>
-    <h1>D# E (2016)</h1>
-    <p>D# to E somewhat randomly while I improvise harmonies on my Kawai SR4 Electric Organ. Heavily inspired by early works of Daniel Lopatin</p>
-
-  </article>
-</section>
-
-<section>
-  <nav>
-    <div class="iframe-container">
-      <iframe width="480" height="720" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/299987971&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-    </div>
-  </nav>
-  
-  <article>
-    <h1>Dr€@m (2016)</h1>
-    <p>I got picked up by Taylor Swift. In her car&mdash;she was in the back seat&mdash;she was telling me about her parents, and how they were being taken advantage of by people, by houseguests. She had to do something so she dropped me off with her church. It was really bright outside and it was really dark inside the church. She told me to go and hang out and schmooze and say hi, so I went into the meeting and I said that I know Taylor Swift. And I was putting on a southern accent.
-
-    <p>And then they invited me to join the meeting, and somehow each person there became a carton of milk&mdash;giant cartons of milk&mdash;or other kind of foodstuff container. And we were on the beach, and we were rolling around in the dunes. And then one of the foodstuff containers finds another foodstuff container (and some of them contain milk and some of them contain other stuff) and one of the containers talks about how good it feels to pour milk out of his nozzle.</p>
-
-    <p>Some of the containers can only move in one way, they can only roll in one in one direction. Some of them look like cigar cases, like individual cigar cases. And then this drunk guy comes from along the beach, and you realize that all of the foodstuffs&mdash;food containers&mdash;they're actually this drunk guy's lunch or something, and he's drinking milk and orange juice and he's pretending like they're people, pretending like they're alive.</p>
-
-    <p>And I dont know what happened after that.</p>
-
-
-  </article>
-</section>
-  
-<section>
-  <nav>
-    <div class="iframe-container">
-    <iframe width="480" height="270"  src="https://www.youtube.com/embed/XJohtj7R0Nk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </div>
-  </nav>
-  
-  <article>
-    <h1>Music for Sitting in the Wet Grass (2018)</h1>
-    <p>Music for Sitting in the Wet Grass (2018) is an improvised work for disklavier and prepared player piano composed by Nathan Turczan, conceived by Madeline Falcone, McLean Macionis and Turczan, and performed by Macionis and Turczan at the October 2018 CalArts Machines and Strings concert Part I. Inspired by the spacey, measured chords of Tyshawn Sorey's "Permutations for Solo Piano," Turczan creates a flat sonic landscape in which chords are repeated (or not) in bell-like tollings, focusing on small one-note changes in a meditative study of piano resonance.</p>
-
-  <p>Conceptually derived from Turczan's exploration of  scale networks (as described by Dmitri Tymoczko), the music navigates a web of forty-eight seven-note musical scales and their intersections. </p>
-
-  </article>
-</section>
-
-<section>
-  <nav>
-    <div class="iframe-container">
-      <iframe width="480" height="270" src="https://www.youtube.com/embed/piCruZ5oHZ0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
-  </nav>
-  
-  <article>
-    <h1>Lydian Reflections (2018)</h1>
-    <p>World premiere of "Lydian Reflections" at CalArts' Wild Beast Music Pavilion on October 13, 2018. Composition and performance by Nathan Turczan and McLean Macionis. From the program notes:</p>
-
-    <p>"Lydian Reflections" (2018) is a one-movement improvisational work for mechatronic piano and electronics by McLean Macionis and Nathan Turczan. The piece is the second in a growing collection of new works by the artists and expresses their fascination with theoretical, network-based harmony, MIDI modulations and digital signal processing. The Greek myth of Echo & Narcissus provides the narrative by which these technical concepts come to life. Turczan embodies the beautiful hunter Narcissus, communicating through phrases consisting of scraping metal and beating piano wire played using the mechatronic piano - affectionately named Lydia. Macionis, who embodies the mountain nymph Echo, reflects these phrases using an assortment of sound capturing tools, creating vivid and haunting repetitions Turczan’s playing.</p>
-  </article>
-</section>
-
-
-<footer>
-
-</footer>
- -->
 </body>
-
 </html>
