Add Early Downhome Blues and Pitch Class Router projects
- Add Early Downhome Blues project page and image (Jeff Todd Titon pitch network)
- Add Pitch Class Router project page and screenshot (MIDI bridge for Scale Navigator)
- Fix Notes Chords Scales links to app and GitHub
- Fix Huron Voiceleading device link in archive

--- a/projects/notes-chords-scales.html
+++ b/projects/notes-chords-scales.html
@@ -44,8 +44,8 @@
             </div>
 
             <div class="project-text-section">
-                <a href="#" target="_blank" class="project-link">Launch App</a>
-                <a href="#" target="_blank" class="project-link">GitHub</a>
+                <a href="https://noteschordsscales.vercel.app/" target="_blank" class="project-link">Launch App</a>
+                <a href="https://github.com/nathanturczan/noteschordsscales" target="_blank" class="project-link">GitHub</a>
             </div>
         </div>
 
